doc news 14: remove garbage

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -47,7 +47,7 @@ This release added `llama.cpp` to the `.["features"]` entry:
 
 You can use `.["features"]["llama.cpp"]` to know whether [llama.cpp](https://github.com/ggerganov/llama.cpp) is enabled or not.
 
-You need the llama.cpp support to use [{doc}`/reference/functions/language_model_vectorize`] function described next.
+You need the llama.cpp support to use {doc}`/reference/functions/language_model_vectorize` function described next.
 
 #### [{doc}`/reference/functions/language_model_vectorize`] Added (Experimental)
 
