docs: unify_middle_dot: Add usage (#2081)
GitHub: GH-2080

You can remove the middle dot when used with `remove_symbol`.

--- a/doc/locale/ja/LC_MESSAGES/reference/normalizers/normalizer_nfkc150.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/normalizers/normalizer_nfkc150.po
@@ -94,6 +94,9 @@ msgstr "以下は、 :ref:`normalizer-nfkc150-unify-hyphen-and-prolonged-sound-m
 msgid "Here is an example of :ref:`normalizer-nfkc150-unify-middle-dot` option. This option enables normalize middle dot to \"·\" (U+00B7 MIDDLE DOT) as below."
 msgstr "以下は、 :ref:`normalizer-nfkc150-unify-middle-dot` オプションの使用例です。このオプションは、中点を\"·\" (U+00B7 MIDDLE DOT)に正規化します。"
 
+msgid "You can use it with :ref:`normalizer-nfkc150-remove-symbol` to remove all characters like middle dot."
+msgstr ":ref:`normalizer-nfkc150-remove-symbol` と一緒に使うと中点のような文字をすべて削除できます。"
+
 msgid "Here is an example of :ref:`normalizer-nfkc150-unify-katakana-v-sounds` option. This option enables normalize \"ヴァヴィヴヴェヴォ\" to \"バビブベボ\" as below."
 msgstr "以下は、 :ref:`normalizer-nfkc150-unify-katakana-v-sounds` オプションの使用例です。このオプションは、以下のように、\"ヴァヴィヴヴェヴォ\"を\"バビブベボ\"に正規化します。"
 
