--- a/doc/locale/ja/LC_MESSAGES/reference/api/grn_column.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/api/grn_column.po
@@ -15,12 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-msgid "パラメータ"
-msgstr ""
-
-msgid "戻り値"
-msgstr ""
-
 msgid "``grn_column``"
 msgstr "``grn_column``"
 
@@ -36,14 +30,5 @@ msgstr "例"
 msgid "Reference"
 msgstr "リファレンス"
 
-msgid "This is a dangerous API. You must not use this API when other thread or process accesses the target column. If you use this API against shared column, the process that accesses the column may be broken and the column may be broken."
-msgstr ""
-
-msgid "Clears all values in the column."
-msgstr ""
-
-msgid "The column to be truncated."
-msgstr "truncate対象のカラム。"
-
-msgid "``GRN_SUCCESS`` on success, not ``GRN_SUCCESS`` on error."
-msgstr "成功時は ``GRN_SUCCESS`` 、エラー時は ``GRN_SUCCESS`` 以外。"
+msgid "We are currently switching to automatic generation using Doxygen."
+msgstr "現在、Doxygenを使った自動生成に切り替え中です。"
