--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,6 +1,76 @@
 # News - 14 series
 
 <!-- prettier-ignore-start -->
+(release-14-1-1)=
+## Release 14.1.1 - 2024-12-03
+<!-- prettier-ignore-end -->
+
+### Improvements
+
+#### Stopped vendoring RapidJSON
+
+[GH-1462](https://github.com/groonga/groonga/issues/1462)
+
+We added support for simdjson in 14.0.7. We don't need to vendor RapidJSON anymore. RapidJSON has a file that uses the JSON license. It's not a free software license / open source license. So we wanted to unvendor RapidJSON.
+
+Note that RapidJSON is still supported. You can still use RapidJSON by installing RapidJSON separately. But we recommend that you use simdjson not RapidJSON.
+
+#### Made llama.cpp initialization lazy
+
+[GH-2078](https://github.com/groonga/groonga/issues/2078)
+
+llama.cpp requires recent SIMD features. If we always initialize llama.cpp, users who use old CPU and don't use llama.cpp related features can't use the official Groonga packages. So we made llama.cpp initialization lazy. Users who use llama.cpp related features still need recent CPU but users who don't use llama.cpp related features can use old CPU as usual.
+
+#### `NormalizerNFKC`: Added support for mixing `unify_middle_dot` and `remove_symbol`
+
+[GH-1538](https://github.com/groonga/groonga/issues/1538)
+
+`NormalizerNFKC` family normalizers such as {doc}`/reference/normalizers/normalizer_nfkc150` can mix {ref}`normalizer-nfkc150-unify-middle-dot` and {ref}`normalizer-nfkc150-remove-symbol` options.
+
+#### {doc}`/reference/commands/defrag`: Added support for {ref}`table-pat-key`
+
+A {ref}`table-pat-key` table couldn't reuse spaces that are used by removed keys. They're still not be reusable automatically, but we can reuse them by executing {doc}`/reference/commands/defrag` explicitly since this release.
+
+#### {doc}`/reference/commands/load`: Improved error handling
+
+If there are any critical errors in {doc}`/reference/commands/load`, we will not wait for more data. Clients may stop sending more data in the case.
+
+#### {doc}`/reference/executables/groonga`: Added `context_id` log flag
+
+It's useful when you use {ref}`query-log` too. In {ref}`query-log`, the context ID is recorded. If we have the context ID in {ref}`process-log` and {ref}`query-log`, we can associate these logs easily.
+
+#### {doc}`/reference/executables/groonga`: Improved error handling
+
+{doc}`/reference/command/request_timeout` uses lock internally. It may be failed in some cases. We added some error checks for the case.
+
+#### {ref}`table-pat-key`: Improved key space efficiency
+
+[GH-2104](https://github.com/groonga/groonga/issues/2104)
+
+There was a case that wastes key space. Now, we can use key space as efficiency as possible.
+
+### Fixes
+
+#### `grn_pat_size()`: Fixed a bug that `0` may not be returned on error
+
+[GH-2097](https://github.com/groonga/groonga/issues/2097)
+
+If the given `pat` is `NULL`, it returns `-22`. But it should have returned `0` with error `ctx->rc`.
+
+Now, Groonga uses the expected behavior.
+
+#### {doc}`/reference/regular_expression`: Fixed a bug with an empty pattern
+
+[GH-2121](https://github.com/groonga/groonga/issues/2121)
+
+If the given pattern is an empty string, there were some problems:
+
+- If there is an index for regular expression, Groonga was crashed.
+- If there is not an index for regular expression, Groonga returns all records.
+
+Now, Groonga returns an empty result for an empty pattern.
+
+<!-- prettier-ignore-start -->
 (release-14-1-0)=
 ## Release 14.1.0 - 2024-11-05
 <!-- prettier-ignore-end -->
