--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (14.1.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Horimoto Yasuhiro <horimoto@clear-code.com>  Tue, 03 Dec 2024 05:22:46 -0000
+
 groonga (14.1.0-1) unstable; urgency=low
 
   * New upstream release.
