--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,6 +1,40 @@
 # News - 14 series
 
 <!-- prettier-ignore-start -->
+(release-14-1-2)=
+## Release 14.1.2 - 2024-12-24
+<!-- prettier-ignore-end -->
+
+### Improvements
+
+#### Relicensed to LGPL-2.1-or-later from LGPL-2.1-only
+
+[GH-1774](https://github.com/groonga/groonga/issues/1774)
+
+It improves GPL 3 or later compatibility.
+
+#### {doc}`/reference/commands/delete`: Added support for referenced weight vector
+
+If a referenced column is indexed, `delete` can also delete the
+deleted referenced value from the referenced column. It works for a
+referenced vector column but didn't work for a referenced "weight"
+vector column.
+
+With this release, this also works for a referenced "weight" vector
+column.
+
+### Fixes
+
+#### {doc}`/reference/columns/vector`: Fixed a bug that needed cast may not be done
+
+Groonga casts a value automatically when it's needed.
+
+If a reference vector column uses 32-bit floating number weight and a
+new value is a no weight reference vector, Groonga must cast the new
+value. But it was not done.
+
+
+<!-- prettier-ignore-start -->
 (release-14-1-1)=
 ## Release 14.1.1 - 2024-12-03
 <!-- prettier-ignore-end -->
